feat: custom scrollbar (#2830)
* feat: custom scrollbar

* chore: modify styling for custom scrollbar

* fix: styling accr. to mockup

* fix: wdith of scroll bar

Signed-off-by: Siddhant Khare <siddhant@gitpod.io>

Signed-off-by: Siddhant Khare <siddhant@gitpod.io>

--- a/src/lib/assets/global.css
+++ b/src/lib/assets/global.css
@@ -232,3 +232,79 @@
   @apply absolute left-[3px];
   content: url(/svg/docs/fold.svg);
 }
+
+/* Scrollbar */
+body::-webkit-scrollbar {
+  background-color: var(--white);
+  width: 12px;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: var(--white);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #ece7e5;
+  border-radius: 12px;
+  border: 2px solid var(--white);
+}
+
+body::-webkit-scrollbar-button {
+  display: none;
+}
+
+/* Dark Mode of Scrollbar */
+body.dark::-webkit-scrollbar {
+  background-color: var(--slight-grey);
+  width: 12px;
+}
+
+body.dark::-webkit-scrollbar-track {
+  background-color: var(--mid-black);
+}
+
+body.dark::-webkit-scrollbar-thumb {
+  background-color: var(--light-black);
+  border-radius: 12px;
+  border: 2px solid var(--mid-black);
+}
+
+body.dark::-webkit-scrollbar-button {
+  display: none;
+}
+
+/* Left Menu Items Scrollbar */
+ul::-webkit-scrollbar {
+  background-color: var(--white);
+  width: 12px;
+  border-radius: 100px;
+}
+
+ul::-webkit-scrollbar-track {
+  background-color: var(--white);
+  border-radius: 100px;
+}
+
+ul::-webkit-scrollbar-thumb {
+  background-color: #ece7e5;
+  border-radius: 12px;
+  border: 2px solid var(--white);
+}
+
+/* Dark Mode of Left Menu Items Scrollbar*/
+.dark ul::-webkit-scrollbar {
+  background-color: var(--slight-grey);
+  width: 12px;
+  border-radius: 100px;
+}
+
+.dark ul::-webkit-scrollbar-track {
+  background-color: var(--mid-black);
+  border-radius: 100px;
+}
+
+.dark ul::-webkit-scrollbar-thumb {
+  background-color: var(--light-black);
+  border-radius: 12px;
+  border: 2px solid var(--mid-black);
+}
