Align table styles with design system (#3719)
* Align table styles with design system

* Align table header height

--- a/src/lib/assets/markdown-commons.scss
+++ b/src/lib/assets/markdown-commons.scss
@@ -68,6 +68,10 @@
     @apply border-l border-solid border-divider;
   }
 
+  th {
+    line-height: 1.5rem;
+  }
+
   tr + tr {
     @apply border-t border-solid border-divider;
   }
